# MiniROS

./: .env.example  .gitignore  docker-compose.yml
cloud/: ESP8266.ino  docker-compose.yml
cloud/backend/: ai_module.py  auth_utils.py  database.py  db_models.py  main.py  models.py  requirements.txt
cloud/backend/routers/: auth.py  devices.py
cloud/dashboard/: index.html  package-lock.json  package.json  vite.config.js
cloud/dashboard/src/: App.jsx  api.js  index.css
cloud/dashboard/src/components/: AIInsights.jsx  CameraModule.jsx  ControlPanel.jsx  DeliveryDashboard.jsx  DroneDashboard.jsx  IRSensors.jsx  LFRDashboard.jsx  Navbar.jsx  SurveillanceDashboard.jsx  TelemetryChart.jsx
cloud/dashboard/src/context/: AuthContext.jsx
cloud/dashboard/src/hooks/: useWebSocket.js
cloud/dashboard/src/pages/: AddDevicePage.jsx  DashboardPage.jsx  DeviceDataPage.jsx  DevicesPage.jsx  HomePage.jsx  LoginPage.jsx  SignupPage.jsx
robot/nodemcu/: lfr_sensor.ino
robot/ros2_ws/: Dockerfile  start-robot.sh
robot/ros2_ws/install/: local_setup.bat  local_setup.ps1  local_setup.sh  setup.sh
robot/ros2_ws/install/telemetry_pkg/share/telemetry_pkg/: package.bash  package.zsh
robot/ros2_ws/log/: latest_build
robot/ros2_ws/src/telemetry_pkg/: package.xml  setup.cfg  setup.py
robot/ros2_ws/src/telemetry_pkg/telemetry_pkg/: bridge_agent.py  command_subscriber.py  delivery_robot_publisher.py  receiver_node.py  sensor_publisher.py
