<?xml version="1.0"?>
<package format="3">
  <name>telemetry_pkg</name>
  <version>0.0.1</version>
  <description>Mini ROS Cloud Edge Robot Package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
</package>